tests/ui/bound_clone_unlisted_marker.stderr
error[E0277]: the trait bound `dyn DynSticker + Send: Clone` is not satisfied
  --> tests/ui/bound_clone_unlisted_marker.rs:25:18
   |
25 |     assert_clone(&send);
   |     ------------ ^^^^^ the trait `Clone` is not implemented for `dyn DynSticker + Send`
   |     |
   |     required by a bound introduced by this call
   |
   = note: required for `Box<dyn DynSticker + Send>` to implement `Clone`
note: required by a bound in `assert_clone`
  --> tests/ui/bound_clone_unlisted_marker.rs:19:20
   |
19 | fn assert_clone<T: Clone>(_: &T) {}
   |                    ^^^^^ required by this bound in `assert_clone`
